Fix reboot command execution in RebootInterceptorHook